# cbp2cmake

./: CMakeLists.txt  README.md  VERSION.h  cbp2cmake.c  tools.c
gnome/: save.txt
